# distparser

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  proposed-project-strucutre.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api_reference.md  development.md  index.md  releasing.md  user_guide.md
examples/: demo.py
src/distparser/: __init__.py  core.py  graph.py  mapping.py
tests/: test_core.py  test_graph.py  test_mapping.py
